--- a/category-list.html
+++ b/category-list.html
@@ -2,126 +2,126 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/category-list.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <title>Categories</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/category-list.css">
+        <link rel="stylesheet" href="css/nav.css">
+        <title>Categories</title>
 </head>
 
 <body>
 
-    <header>
-        <div class="menu-container">
+        <header>
+                <div class="menu-container">
 
-            <img src="img/logo.svg" alt="logo" class="logo">
+                        <img src="img/logo.svg" alt="logo" class="logo">
 
-            <nav class="menu">
-                <button class="navnutton"><a class="menulink" href="index.html">Home</a></button>
-                <div class="dropdown">
-                        <button class="explore">Explore</button>
-                        <ul>
-                          <li><a class="menulink" href="category-list.html">Categories</a></li>
-                          <li><a class="menulink" href="#">Areas</a></li>
-                          <li><a class="menulink" href="#">Discover weekly</a></li>
-                      </ul>
-                    </div>
-                <button class="navbutton"><a class="menulink" href="about.html">About</a></button>
-                <button class="navbutton"><a class="menulink" href="newsletter.html">Newsletter</a></button>
-            </ul>
-        </nav>
+                        <nav class="menu">
+                                <button><a class="menulink" href="index.html">Home</a></button>
+                                <div class="dropdown">
+                                        <button class="explore">Explore</button>
+                                        <ul>
+                                                <li><a class="menulink" href="category-list.html">Categories</a></li>
+                                                <li><a class="menulink" href="#">Areas</a></li>
+                                                <li><a class="menulink" href="#">Discover weekly</a></li>
+                                        </ul>
+                                </div>
+                                <button><a class="menulink" href="about.html">About</a></button>
+                                <button><a class="menulink" href="newsletter.html">Newsletter</a></button>
+                                </ul>
+                        </nav>
 
-            <div class="hamburger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
+                        <div class="hamburger">
+                                <div class="line1"></div>
+                                <div class="line2"></div>
+                                <div class="line3"></div>
+                        </div>
+
+                </div>
+        </header>
 
         </div>
-    </header>
+        </header>
 
-    </div>
-</header>
-    
-<main>
+        <main>
 
-    <h1>Categories</h1>
+                <h1>Categories</h1>
 
-    <section class="categories">
+                <section class="categories">
 
-        <a href="#">
-        <article class="category">
-                <img src="img/mustsee.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Must-see places</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/mustsee.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Must-see places</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/insta.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Instagrammable spots</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/insta.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Instagrammable spots</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/history.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Historical sites</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/history.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Historical sites</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/architecture.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Architecture objects</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/architecture.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Architecture objects</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/museum.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Museums</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/museum.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Museums</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/parks.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Parks and nature</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/parks.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Parks and nature</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/entertainment.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Entertainment</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/entertainment.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Entertainment</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/coffee.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Coffee shops</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/coffee.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Coffee shops</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/bars.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Bars and nightlife</h2>
-        </article>
-        </a>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/bars.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Bars and nightlife</h2>
+                                </article>
+                        </a>
 
-        <a href="#">
-        <article class="category">
-                <img src="img/outdoor.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Outdoor activities</h2>
-        </article>
-        </a>
-</main>
+                        <a href="#">
+                                <article class="category">
+                                        <img src="img/outdoor.svg" alt="" class="categoryimage">
+                                        <h2 class="categoryname">Outdoor activities</h2>
+                                </article>
+                        </a>
+        </main>
 
-    <script src="js/nav.js"></script>
+        <script src="js/nav.js"></script>
 
 </body>
 
