--- a/area-list.html
+++ b/area-list.html
@@ -35,79 +35,59 @@
 
                 </div>
         </header>
+
         <main>
 
-                <h1>Categories</h1>
+                <h1>Areas</h1>
 
                 <section class="categories">
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Must-see places&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Amager&quot;}">
                                 <article class="category">
                                         <img src="img/mustsee.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Must-see places</h2>
+                                        <h2 class="categoryname">Amager</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Instagrammable spots&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Bispebjerg&quot;}">
                                 <article class="category">
                                         <img src="img/insta.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Instagrammable spots</h2>
+                                        <h2 class="categoryname">Bispebjerg</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Historial sights&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Østerbro&quot;}">
                                 <article class="category">
                                         <img src="img/history.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Historical sites</h2>
+                                        <h2 class="categoryname">Østerbro</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Architecture objects&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Nørrebro&quot;}">
                                 <article class="category">
                                         <img src="img/architecture.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Architecture objects</h2>
+                                        <h2 class="categoryname">Nørrebro</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Museums&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Frederiksberg&quot;}">
                                 <article class="category">
                                         <img src="img/museum.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Museums</h2>
+                                        <h2 class="categoryname">Frederiksberg</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Parks and nature&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Vesterbro&quot;}">
                                 <article class="category">
                                         <img src="img/parks.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Parks and nature</h2>
+                                        <h2 class="categoryname">Vesterbro</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Entertainment&quot;}">
+                        <a href="article.html?q={&quot;Area&quot;: &quot;Indre By&quot;}">
                                 <article class="category">
                                         <img src="img/entertainment.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Entertainment</h2>
-                                </article>
-                        </a>
-
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Coffee shops&quot;}">
-                                <article class="category">
-                                        <img src="img/coffee.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Coffee shops</h2>
-                                </article>
-                        </a>
-
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Bars and nightlife&quot;}">
-                                <article class="category">
-                                        <img src="img/bars.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Bars and nightlife</h2>
-                                </article>
-                        </a>
-
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Outdoor activities&quot;}">
-                                <article class="category">
-                                        <img src="img/outdoor.svg" alt="" class="categoryimage">
-                                        <h2 class="categoryname">Outdoor activities</h2>
+                                        <h2 class="categoryname">Indre By</h2>
                                 </article>
                         </a>
         </main>
