--- a/article.html
+++ b/article.html
@@ -17,17 +17,12 @@
       <img src="img/logo.svg" alt="logo" class="logo">
 
       <nav class="menu">
-        <button><a class="menulink" href="index.html">Home</a></button>
-        <div class="dropdown">
-          <button class="explore">Explore</button>
-          <ul>
-            <li><a class="menulink" href="category-list.html">Categories</a></li>
-            <li><a class="menulink" href="#">Areas</a></li>
-            <li><a class="menulink" href="#">Discover weekly</a></li>
-          </ul>
-        </div>
-        <button><a class="menulink" href="about.html">About</a></button>
-        <button><a class="menulink" href="newsletter.html">Newsletter</a></button>
+        <a class="menulink" href="index.html">Home</a></button>
+        <a class="menulink" href="category-list.html">Categories</a>
+        <a class="menulink" href="area-list.html">Areas</a>
+        <!-- <a class="menulink" href="#">Discover weekly</a> -->
+        <a class="menulink" href="about.html">About</a>
+        <a class="menulink" href="newsletter.html">Newsletter</a>
         </ul>
       </nav>
 
