--- a/newsletter.html
+++ b/newsletter.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <title>Newsletter</title>
-  </head>
-  <body class="newsletter-page">
-    <header>
-      <div class="menu-container">
-        <img src="img/logo.svg" alt="logo" class="logo" />
 
-        <nav class="menu">
-          <button><a class="menulink" href="index.html">Home</a></button>
-          <div class="dropdown">
-                  <button class="explore">Explore</button>
-                  <ul>
-                    <li><a class="menulink" href="category-list.html">Categories</a></li>
-                    <li><a class="menulink" href="#">Areas</a></li>
-                    <li><a class="menulink" href="#">Discover weekly</a></li>
-                </ul>
-              </div>
-          <button><a class="menulink" href="about.html">About</a></button>
-          <button><a class="menulink" href="newsletter.html">Newsletter</a></button>
-      </ul>
-  </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/nav.css" />
+  <title>Newsletter</title>
+</head>
 
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
+<body class="newsletter-page">
+  <header>
+    <div class="menu-container">
+
+      <img src="img/logo.svg" alt="logo" class="logo">
+
+      <nav class="menu">
+        <a class="menulink" href="index.html">Home</a></button>
+        <a class="menulink" href="category-list.html">Categories</a>
+        <a class="menulink" href="area-list.html">Areas</a>
+        <!-- <a class="menulink" href="#">Discover weekly</a> -->
+        <a class="menulink" href="about.html">About</a>
+        <a class="menulink" href="newsletter.html">Newsletter</a>
+        </ul>
+      </nav>
+
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
-    </header>
-    <main class="newsletter-main">
-      <h1 class="news-heading">
-        Join us today and let us inspire you on the journey to become a true
-        Copenhagener.
-      </h1>
-      <form class="newsletter-signup">
-        <label for="e-mail" class="last-name">E-mail</label>
-        <input id="e-mail" type="text" />
 
-        <button class="send-button">Submit</button>
-      </form>
-    </main>
-    <footer></footer>
-  </body>
+    </div>
+  </header>
+  <main class="newsletter-main">
+    <h1 class="news-heading">
+      Join us today and let us inspire you on the journey to become a true
+      Copenhagener.
+    </h1>
+    <form class="newsletter-signup">
+      <label for="e-mail" class="last-name">E-mail</label>
+      <input id="e-mail" type="text" />
+
+      <button class="send-button">Submit</button>
+    </form>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
